tests/fixtures/extract_parity/valid_text_plain/valid_text_plain.kicad_sch
(kicad_sch
  (version 20260101)
  (generator "eeschema")
  (uuid "valid-text-plain-root")
  (paper "A4")
  (text "Hello"
    (at 10 10 0)
    (effects (font (size 1.27 1.27)))
    (uuid "t1"))
  (sheet_instances
    (path "/" (page "1"))))
