tests/fixtures/extract_parity/invalid_label_at_arity/invalid_label_at_arity.kicad_sch
(kicad_sch
  (version 20260101)
  (generator "eeschema")
  (uuid "invalid-label-at-root")
  (paper "A4")
  (label "SIG" (at 0 0 0 0) (effects (font (size 1.27 1.27))) (uuid "l1"))
  (sheet_instances
    (path "/" (page "1"))))
